--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -7,7 +7,7 @@ setw -g mouse on
 set -gw xterm-keys on
 set-option -g default-shell /bin/zsh
 
-bind \ split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind \\ split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}'  # Split panes vertically
 
 # Bottom
